k8s/applications/media/ersatztv/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  namespace: ersatztv
spec:
  selector:
    app: ersatztv
  ports:
    - name: http
      port: 8409
      targetPort: http
