k8s/applications/media/ersatztv/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ersatztv
  namespace: ersatztv
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - tv.k8s.eudald.gr
  rules:
    - backendRefs:
        - name: ersatztv
          port: 8409
